WebKit Bugzilla
New
Browse
Log In
×
Sign in with GitHub
or
Remember my login
Create Account
·
Forgot Password
Forgotten password account recovery
RESOLVED FIXED
253583
[UI-side compositing] Fix dynamicDowncast in RemoteScrollingTreeMac::handleWheelEventPhase
https://bugs.webkit.org/show_bug.cgi?id=253583
Summary
[UI-side compositing] Fix dynamicDowncast in RemoteScrollingTreeMac::handleWh...
Nikos Mouchtaris
Reported
2023-03-08 10:35:45 PST
[UI-side compositing] Remove dereference in RemoteScrollingTreeMac::handleWheelEventPhase
Attachments
Add attachment
proposed patch, testcase, etc.
Nikos Mouchtaris
Comment 1
2023-03-08 10:43:15 PST
<
rdar://problem/106420122
>
Nikos Mouchtaris
Comment 2
2023-03-08 10:44:28 PST
Pull request:
https://github.com/WebKit/WebKit/pull/11238
EWS
Comment 3
2023-03-09 11:48:11 PST
Committed
261452@main
(bf3c4d5c6bec): <
https://commits.webkit.org/261452@main
> Reviewed commits have been landed. Closing PR #11238 and removing active labels.
Note
You need to
log in
before you can comment on or make changes to this bug.
Top of Page
Format For Printing
XML
Clone This Bug