[UI-side compositing] Fix dynamicDowncast in RemoteScrollingTreeMac::handleWheelEventPhase https://bugs.webkit.org/show_bug.cgi?id=253583 rdar://106420122

Reviewed by Simon Fraser.

Fix dynamicDowncast in RemoteScrollingTreeMac::handleWheelEventPhase.

* Source/WebKit/UIProcess/RemoteLayerTree/mac/RemoteScrollingTreeMac.mm:
(WebKit::RemoteScrollingTreeMac::handleWheelEventPhase):

Canonical link: https://commits.webkit.org/261452@main